[FIX] z-index 추가

--- a/css/sukyung.css
+++ b/css/sukyung.css
@@ -6,6 +6,7 @@ body {
 /*제일 위 헤더*/
 /*헤더에도 스크롤이 생기는 문제... 는 아르샤는 헤더 아래에 html이 다시 시작해서 그런걸까 하는 짐작.*/
 #header {
+    z-index: 97;
     position: fixed;
     top: 0;
     left: 0;
@@ -136,6 +137,7 @@ body {
 
 /*남색 헤더*/
 #s-header {
+    z-index: 97;
     position: fixed;
     top: 6.5rem;
     right: 0;
